bugfix: numerous changes on mobile nav menu

--- a/static/css/rosenpass.css
+++ b/static/css/rosenpass.css
@@ -1176,7 +1176,7 @@ div.mobileNav.mobileNav-end {
 
   .mobileNav-li {
     border-radius: 0.3rem;
-    padding: 0 1.5rem 0.5rem 1rem;
+    padding: 0 1.5rem 0 1rem;
     margin: 0 1rem 1rem 1.5rem;
 
     .mobileNav-li-content {
@@ -1188,12 +1188,7 @@ div.mobileNav.mobileNav-end {
     }
 
     i {
-      margin-left: auto;
-      padding-top: 1rem;
-    }
-
-    i::before {
-      vertical-align: sub;
+      margin: auto 0 auto auto;
     }
 
     i.external-link {
